--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <title>AngProg</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
